2009-08-12  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* po/fr.po:
	last batch, there are still some flaky or non-translated strings though.

2009-08-12  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* po/fr.po:
	going on with the french translations...

2009-08-12  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	0.5.4.2 prerelase

2009-08-12  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	Change the required version of Python to 2.4.0, which unbreaks the
	Python version detection logic in the autotools setup.

2009-08-12  Jan Urbanski  <jurbanski@flumotion.com>

	* data/make-dummy-cert:
	Remove bashism in the usage of the trap shell builtin.
	It made make-dummy-cert fail on systems that use a different shell than
	bash as their system shell, e.g. recent Ubuntus and Debians that use
	dash as the system shell.

2009-08-12  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* po/fr.po:
	continuing french translation.

2009-08-12  Jan Urbanski  <jurbanski@flumotion.com>

	* README:
	* configure.ac:
	* flumotion.spec.in:
	Bump the required version of Python to 2.4.

2009-08-11  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* po/fr.po:
	adding a few '\n' so the .po file is valid

2009-08-11  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* po/fr.po:
	Refine the first 200 french strings.

2009-08-11  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/base/http.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/test/test_http.py:
	Revert r7950, the allow-default property of streaming components. There
	is no consensus about what the property should do and how it should be
	named. It may be reintroduced after the 0.6.0 release.

2009-08-10  Jan Urbanski  <jurbanski@flumotion.com>
