@@ -1,5 +1,5 @@
-data/glade/admin.glade
 data/glade/admin-wizard.glade
+data/glade/admin.glade
 data/glade/audio-encoder-wizard.glade
 data/glade/authenticate.glade
 data/glade/connection-dialog.glade
@@ -12,8 +12,8 @@ data/glade/greeter-authenticate.glade
 data/glade/greeter-connect_to_existing.glade
 data/glade/greeter-initial.glade
 data/glade/greeter-load_connection.glade
-data/glade/greeter-start_new_error.glade
 data/glade/greeter-start_new.glade
+data/glade/greeter-start_new_error.glade
 data/glade/greeter-start_new_success.glade
 data/glade/httpstreamer-wizard.glade
 data/glade/license-wizard.glade
@@ -22,13 +22,15 @@ data/glade/open-connection.glade
 data/glade/overlay-wizard.glade
 data/glade/overview-wizard.glade
 data/glade/production-wizard.glade
-data/glade/sectionwizard.glade
 data/glade/scenario-wizard.glade
+data/glade/sectionwizard.glade
 data/glade/select-producers-wizard.glade
 data/glade/shout2-wizard.glade
 data/glade/summary-wizard.glade
 data/glade/videotest.glade
 data/glade/welcome-wizard.glade
+flumotion/__init__.py
+flumotion/admin/__init__.py
 flumotion/admin/admin.py
 flumotion/admin/assistant/__init__.py
 flumotion/admin/assistant/models.py
@@ -36,8 +38,10 @@ flumotion/admin/assistant/save.py
 flumotion/admin/command/__init__.py
 flumotion/admin/command/main.py
 flumotion/admin/command/utils.py
+flumotion/admin/command/worker.py
 flumotion/admin/config.py
 flumotion/admin/connections.py
+flumotion/admin/gtk/__init__.py
 flumotion/admin/gtk/adminwindow.py
 flumotion/admin/gtk/basesteps.py
 flumotion/admin/gtk/componentlist.py
@@ -47,44 +51,42 @@ flumotion/admin/gtk/connections.py
 flumotion/admin/gtk/debugmarkerview.py
 flumotion/admin/gtk/dialogs.py
 flumotion/admin/gtk/greeter.py
-flumotion/admin/gtk/__init__.py
 flumotion/admin/gtk/main.py
 flumotion/admin/gtk/message.py
 flumotion/admin/gtk/overlaystep.py
 flumotion/admin/gtk/statusbar.py
 flumotion/admin/gtk/workerlist.py
 flumotion/admin/gtk/workerstep.py
-flumotion/admin/__init__.py
 flumotion/admin/multi.py
-flumotion/admin/rrdmon/config.py
 flumotion/admin/rrdmon/__init__.py
+flumotion/admin/rrdmon/config.py
 flumotion/admin/rrdmon/main.py
 flumotion/admin/rrdmon/rrdmon.py
+flumotion/admin/text/__init__.py
 flumotion/admin/text/admin_text.py
 flumotion/admin/text/connection.py
 flumotion/admin/text/greeter.py
-flumotion/admin/text/__init__.py
 flumotion/admin/text/main.py
 flumotion/admin/text/misc_curses.py
 flumotion/admin/text/view.py
+flumotion/common/__init__.py
 flumotion/common/avltree.py
 flumotion/common/boot.py
-flumotion/common/bundleclient.py
 flumotion/common/bundle.py
+flumotion/common/bundleclient.py
 flumotion/common/common.py
 flumotion/common/componentui.py
 flumotion/common/config.py
 flumotion/common/connection.py
 flumotion/common/dag.py
-flumotion/common/documentation.py
 flumotion/common/debug.py
+flumotion/common/documentation.py
 flumotion/common/enum.py
 flumotion/common/errors.py
 flumotion/common/format.py
 flumotion/common/fxml.py
 flumotion/common/gstreamer.py
 flumotion/common/identity.py
-flumotion/common/__init__.py
 flumotion/common/interfaces.py
 flumotion/common/keycards.py
 flumotion/common/log.py
@@ -112,6 +114,8 @@ flumotion/common/vfsgio.py
 flumotion/common/vfsgnome.py
 flumotion/common/watched.py
 flumotion/common/worker.py
+flumotion/component/__init__.py
+flumotion/component/base/__init__.py
 flumotion/component/base/admin_gtk.py
 flumotion/component/base/admin_text.py
 flumotion/component/base/baseadminnode.py
@@ -123,71 +127,89 @@ flumotion/component/base/effectsnode.py
 flumotion/component/base/feeders.glade
 flumotion/component/base/feedersnode.py
 flumotion/component/base/http.py
-flumotion/component/base/__init__.py
 flumotion/component/base/properties.glade
 flumotion/component/base/propertiesnode.py
 flumotion/component/base/scheduler.py
 flumotion/component/base/statewatcher.py
 flumotion/component/base/watcher.py
+flumotion/component/bouncers/__init__.py
 flumotion/component/bouncers/admin_gtk.py
 flumotion/component/bouncers/bouncer.glade
 flumotion/component/bouncers/bouncer.py
+flumotion/component/bouncers/bouncer.xml
 flumotion/component/bouncers/component.py
 flumotion/component/bouncers/htpasswdcrypt.py
+flumotion/component/bouncers/htpasswdcrypt.xml
 flumotion/component/bouncers/icalbouncer.py
-flumotion/component/bouncers/__init__.py
+flumotion/component/bouncers/icalbouncer.xml
 flumotion/component/bouncers/ipbouncer.py
+flumotion/component/bouncers/ipbouncer.xml
 flumotion/component/bouncers/plug.py
 flumotion/component/bouncers/saltsha256.py
-flumotion/component/bouncers/tokentestbouncer.py
+flumotion/component/bouncers/saltsha256.xml
 flumotion/component/bouncers/tokentest.py
-flumotion/component/combiners/composite/composite.py
-flumotion/component/combiners/composite/__init__.py
+flumotion/component/bouncers/tokentest.xml
+flumotion/component/bouncers/tokentestbouncer.py
 flumotion/component/combiners/__init__.py
+flumotion/component/combiners/composite/__init__.py
+flumotion/component/combiners/composite/composite.py
+flumotion/component/combiners/composite/composite.xml
+flumotion/component/combiners/switch/__init__.py
 flumotion/component/combiners/switch/admin_gtk.py
 flumotion/component/combiners/switch/basicwatchdog.py
-flumotion/component/combiners/switch/__init__.py
 flumotion/component/combiners/switch/patternswitch.py
 flumotion/component/combiners/switch/switch.py
+flumotion/component/combiners/switch/switch.xml
 flumotion/component/component.py
+flumotion/component/consumers/__init__.py
+flumotion/component/consumers/disker/__init__.py
 flumotion/component/consumers/disker/admin_gtk.py
 flumotion/component/consumers/disker/admin_text.py
 flumotion/component/consumers/disker/disker.glade
-flumotion/component/consumers/disker/disker_plug.py
 flumotion/component/consumers/disker/disker.py
-flumotion/component/consumers/disker/__init__.py
+flumotion/component/consumers/disker/disker.xml
+flumotion/component/consumers/disker/disker_plug.py
+flumotion/component/consumers/gdp/__init__.py
+flumotion/component/consumers/gdp/gdp.py
+flumotion/component/consumers/gdp/gdp.xml
+flumotion/component/consumers/httpstreamer/__init__.py
 flumotion/component/consumers/httpstreamer/admin_gtk.py
 flumotion/component/consumers/httpstreamer/httpstreamer.glade
 flumotion/component/consumers/httpstreamer/httpstreamer.py
-flumotion/component/consumers/httpstreamer/__init__.py
+flumotion/component/consumers/httpstreamer/httpstreamer.xml
 flumotion/component/consumers/httpstreamer/resources.py
-flumotion/component/consumers/__init__.py
 flumotion/component/consumers/preview/__init__.py
 flumotion/component/consumers/preview/preview.py
+flumotion/component/consumers/preview/preview.xml
 flumotion/component/consumers/shout2/__init__.py
 flumotion/component/consumers/shout2/shout2.py
+flumotion/component/consumers/shout2/shout2.xml
 flumotion/component/converters/__init__.py
-flumotion/component/converters/overlay/genimg.py
 flumotion/component/converters/overlay/__init__.py
+flumotion/component/converters/overlay/genimg.py
 flumotion/component/converters/overlay/overlay.py
+flumotion/component/converters/overlay/overlay.xml
 flumotion/component/converters/pipeline/__init__.py
 flumotion/component/converters/pipeline/pipeline.py
+flumotion/component/converters/pipeline/pipeline.xml
 flumotion/component/eater.py
+flumotion/component/effects/__init__.py
+flumotion/component/effects/colorbalance/__init__.py
 flumotion/component/effects/colorbalance/admin_gtk.py
 flumotion/component/effects/colorbalance/colorbalance.glade
 flumotion/component/effects/colorbalance/colorbalance.py
-flumotion/component/effects/colorbalance/__init__.py
-flumotion/component/effects/__init__.py
-flumotion/component/effects/volume/admin_gtk.py
+flumotion/component/effects/colorbalance/colorbalance.xml
 flumotion/component/effects/volume/__init__.py
+flumotion/component/effects/volume/admin_gtk.py
 flumotion/component/effects/volume/volume.glade
 flumotion/component/effects/volume/volume.py
+flumotion/component/effects/volume/volume.xml
+flumotion/component/encoders/__init__.py
+flumotion/component/encoders/dirac/__init__.py
 flumotion/component/encoders/dirac/dirac.py
 flumotion/component/encoders/dirac/dirac.xml
-flumotion/component/encoders/dirac/__init__.py
 flumotion/component/encoders/dirac/wizard.glade
 flumotion/component/encoders/dirac/wizard_gtk.py
-flumotion/component/encoders/__init__.py
 flumotion/component/encoders/jpeg/__init__.py
 flumotion/component/encoders/jpeg/jpeg.py
 flumotion/component/encoders/jpeg/jpeg.xml
@@ -213,123 +235,136 @@ flumotion/component/encoders/theora/theora.xml
 flumotion/component/encoders/theora/wizard.glade
 flumotion/component/encoders/theora/wizard_gtk.py
 flumotion/component/encoders/vorbis/__init__.py
-flumotion/component/encoders/vorbis/vorbis010.py
 flumotion/component/encoders/vorbis/vorbis.py
-flumotion/component/encoders/vorbis/vorbisutils.py
 flumotion/component/encoders/vorbis/vorbis.xml
+flumotion/component/encoders/vorbis/vorbis010.py
+flumotion/component/encoders/vorbis/vorbisutils.py
 flumotion/component/encoders/vorbis/wizard.glade
 flumotion/component/encoders/vorbis/wizard_gtk.py
-flumotion/component/feedcomponent010.py
-flumotion/component/feedcomponent.py
-flumotion/component/feeder.py
 flumotion/component/feed.py
-flumotion/component/__init__.py
+flumotion/component/feedcomponent.py
+flumotion/component/feedcomponent010.py
+flumotion/component/feeder.py
+flumotion/component/misc/__init__.py
+flumotion/component/misc/httpserver/__init__.py
 flumotion/component/misc/httpserver/admin_gtk.py
-flumotion/component/misc/httpserver/httpfile.py
 flumotion/component/misc/httpserver/httpfile.glade
+flumotion/component/misc/httpserver/httpfile.py
 flumotion/component/misc/httpserver/httpserver.glade
 flumotion/component/misc/httpserver/httpserver.py
-flumotion/component/misc/httpserver/__init__.py
-flumotion/component/misc/__init__.py
+flumotion/component/misc/httpserver/httpserver.xml
 flumotion/component/misc/porter/__init__.py
-flumotion/component/misc/porter/porterclient.py
 flumotion/component/misc/porter/porter.py
+flumotion/component/misc/porter/porter.xml
+flumotion/component/misc/porter/porterclient.py
 flumotion/component/misc/repeater/__init__.py
 flumotion/component/misc/repeater/repeater.py
-flumotion/component/muxers/checks.py
+flumotion/component/misc/repeater/repeater.xml
 flumotion/component/muxers/__init__.py
+flumotion/component/muxers/checks.py
 flumotion/component/muxers/multipart.py
 flumotion/component/muxers/muxers.xml
 flumotion/component/muxers/ogg.py
 flumotion/component/padmonitor.py
+flumotion/component/plugs/__init__.py
 flumotion/component/plugs/adminaction.py
 flumotion/component/plugs/base.py
 flumotion/component/plugs/cortado/cortado.xml
 flumotion/component/plugs/identity.py
-flumotion/component/plugs/__init__.py
+flumotion/component/plugs/plugs.xml
 flumotion/component/plugs/request.py
-flumotion/component/plugs/manhole.py
+flumotion/component/plugs/rrd.py
 flumotion/component/plugs/streamdata.py
+flumotion/component/producers/__init__.py
+flumotion/component/producers/audiotest/__init__.py
 flumotion/component/producers/audiotest/admin_gtk.py
 flumotion/component/producers/audiotest/audiotest.glade
 flumotion/component/producers/audiotest/audiotest.py
 flumotion/component/producers/audiotest/audiotest.xml
-flumotion/component/producers/audiotest/__init__.py
 flumotion/component/producers/audiotest/wizard.glade
 flumotion/component/producers/audiotest/wizard_gtk.py
+flumotion/component/producers/bttv/__init__.py
 flumotion/component/producers/bttv/admin_gtk.py
 flumotion/component/producers/bttv/bttv.py
 flumotion/component/producers/bttv/bttv.xml
 flumotion/component/producers/bttv/colorbalance.glade
-flumotion/component/producers/bttv/__init__.py
 flumotion/component/producers/bttv/wizard.glade
 flumotion/component/producers/bttv/wizard_gtk.py
 flumotion/component/producers/checks.py
+flumotion/component/producers/firewire/__init__.py
 flumotion/component/producers/firewire/admin_gtk.py
 flumotion/component/producers/firewire/firewire.py
 flumotion/component/producers/firewire/firewire.xml
-flumotion/component/producers/firewire/__init__.py
 flumotion/component/producers/firewire/wizard.glade
 flumotion/component/producers/firewire/wizard_gtk.py
-flumotion/component/producers/gdp/gdp.py
 flumotion/component/producers/gdp/__init__.py
-flumotion/component/producers/icecast/icecast.py
+flumotion/component/producers/gdp/gdp.py
+flumotion/component/producers/gdp/gdp.xml
 flumotion/component/producers/icecast/__init__.py
-flumotion/component/producers/__init__.py
+flumotion/component/producers/icecast/icecast.py
+flumotion/component/producers/icecast/icecast.xml
 flumotion/component/producers/ivtv/__init__.py
 flumotion/component/producers/ivtv/ivtv.py
+flumotion/component/producers/ivtv/ivtv.xml
+flumotion/component/producers/looper/__init__.py
 flumotion/component/producers/looper/admin_gtk.py
 flumotion/component/producers/looper/flufileinfo.glade
-flumotion/component/producers/looper/__init__.py
 flumotion/component/producers/looper/looper.glade
 flumotion/component/producers/looper/looper.py
+flumotion/component/producers/looper/looper.xml
 flumotion/component/producers/looper/wizard.glade
 flumotion/component/producers/looper/wizard_gtk.py
 flumotion/component/producers/pipeline/__init__.py
 flumotion/component/producers/pipeline/pipeline.py
+flumotion/component/producers/pipeline/pipeline.xml
 flumotion/component/producers/playlist/__init__.py
-flumotion/component/producers/playlist/playlistparser.py
+flumotion/component/producers/playlist/admin_gtk.py
+flumotion/component/producers/playlist/playlist.glade
 flumotion/component/producers/playlist/playlist.py
+flumotion/component/producers/playlist/playlist.xml
+flumotion/component/producers/playlist/playlistparser.py
 flumotion/component/producers/playlist/singledecodebin.py
 flumotion/component/producers/playlist/smartscale.py
 flumotion/component/producers/rtsp/__init__.py
 flumotion/component/producers/rtsp/rtsp.py
+flumotion/component/producers/rtsp/rtsp.xml
 flumotion/component/producers/screencast/__init__.py
 flumotion/component/producers/screencast/screencast.py
-flumotion/component/producers/soundcard/admin_gtk.py
+flumotion/component/producers/screencast/screencast.xml
 flumotion/component/producers/soundcard/__init__.py
+flumotion/component/producers/soundcard/admin_gtk.py
 flumotion/component/producers/soundcard/soundcard.py
 flumotion/component/producers/soundcard/soundcard.xml
 flumotion/component/producers/soundcard/wizard.glade
 flumotion/component/producers/soundcard/wizard_gtk.py
 flumotion/component/producers/unixdomain/__init__.py
 flumotion/component/producers/unixdomain/unixdomain.py
+flumotion/component/producers/unixdomain/unixdomain.xml
+flumotion/component/producers/videotest/__init__.py
 flumotion/component/producers/videotest/admin_gtk.py
 flumotion/component/producers/videotest/admin_text.py
-flumotion/component/producers/videotest/__init__.py
 flumotion/component/producers/videotest/videotest.py
 flumotion/component/producers/videotest/videotest.xml
 flumotion/component/producers/videotest/wizard.glade
 flumotion/component/producers/videotest/wizard_gtk.py
-flumotion/component/producers/webcam/admin_gtk.py
 flumotion/component/producers/webcam/__init__.py
+flumotion/component/producers/webcam/admin_gtk.py
 flumotion/component/producers/webcam/webcam.py
 flumotion/component/producers/webcam/webcam.xml
 flumotion/component/producers/webcam/wizard.glade
-flumotion/component/producers/webcam/wizard.glade
 flumotion/component/producers/webcam/wizard_gtk.py
-flumotion/configure/configure.py
 flumotion/configure/__init__.py
+flumotion/configure/configure.py
 flumotion/configure/installed.py
 flumotion/configure/uninstalled.py
+flumotion/extern/__init__.py
 flumotion/extern/code.py
 flumotion/extern/exceptiondialog.py
 flumotion/extern/fdpass/__init__.py
-flumotion/extern/__init__.py
-flumotion/extern/pytrayicon/eggtrayicon.c
+flumotion/extern/log/__init__.py
 flumotion/extern/pytrayicon/__init__.py
+flumotion/extern/pytrayicon/eggtrayicon.c
 flumotion/extern/pytrayicon/ltihooks.py
-flumotion/__init__.py
 flumotion/job/__init__.py
 flumotion/job/job.py
 flumotion/job/main.py
@@ -337,79 +372,93 @@ flumotion/launch/__init__.py
 flumotion/launch/inspect.py
 flumotion/launch/main.py
 flumotion/launch/parse.py
+flumotion/manager/__init__.py
 flumotion/manager/admin.py
 flumotion/manager/base.py
 flumotion/manager/component.py
 flumotion/manager/config.py
-flumotion/manager/__init__.py
 flumotion/manager/main.py
 flumotion/manager/manager.py
 flumotion/manager/worker.py
 flumotion/monitor/__init__.py
 flumotion/monitor/nagios/__init__.py
+flumotion/monitor/nagios/log.py
 flumotion/monitor/nagios/main.py
+flumotion/monitor/nagios/process.py
+flumotion/monitor/nagios/stream.py
 flumotion/monitor/nagios/util.py
+flumotion/package.xml
 flumotion/project/__init__.py
+flumotion/project/flumotion.locale.xml
 flumotion/project/project.py
 flumotion/scenario/__init__.py
-flumotion/scenario/steps/steps.xml
-flumotion/scenario/steps/__init__.py
-flumotion/scenario/steps/licensestep.py
-flumotion/scenario/steps/shout2steps.py
-flumotion/scenario/steps/summarysteps.py
+flumotion/scenario/live/live.xml
+flumotion/scenario/live/wizard_gtk.py
+flumotion/scenario/ondemand/ondemand.xml
+flumotion/scenario/ondemand/wizard_gtk.py
+flumotion/scenario/scenario.xml
+flumotion/scenario/steps/consumptionsteps.py
+flumotion/scenario/steps/conversionsteps.py
+flumotion/scenario/steps/diskersteps.py
 flumotion/scenario/steps/httpstreamersteps.py
+flumotion/scenario/steps/licensestep.py
 flumotion/scenario/steps/ondemandstep.py
 flumotion/scenario/steps/productionsteps.py
-flumotion/scenario/steps/consumptionsteps.py
-flumotion/scenario/steps/diskersteps.py
-flumotion/scenario/steps/conversionsteps.py
-flumotion/scenario/ondemand/ondemand.xml
-flumotion/scenario/ondemand/__init__.py
-flumotion/scenario/ondemand/wizard_gtk.py
-flumotion/scenario/live/live.xml
-flumotion/scenario/live/__init__.py
-flumotion/scenario/live/wizard_gtk.py
+flumotion/scenario/steps/shout2steps.py
+flumotion/scenario/steps/steps.xml
+flumotion/scenario/steps/summarysteps.py
 flumotion/service/__init__.py
 flumotion/service/main.py
 flumotion/service/service.py
-flumotion/test/bouncertest.py
-flumotion/test/comptest.py
-flumotion/tester/clientfactory.py
-flumotion/tester/client.py
-flumotion/tester/httpclient.py
-flumotion/tester/__init__.py
-flumotion/test/gtkunit.py
 flumotion/test/__init__.py
+flumotion/test/bouncertest.py
+flumotion/test/common.py
+flumotion/test/comptest.py
+flumotion/test/gtkunit.py
 flumotion/test/realm.py
+flumotion/test/test.xml
+flumotion/test/testLoadComponent.xml
 flumotion/test/test_admin_admin.py
 flumotion/test/test_admin_config.py
+flumotion/test/test_admin_connections.py
 flumotion/test/test_admin_multi.py
+flumotion/test/test_bouncers_ipbouncer.py
 flumotion/test/test_checkers.py
+flumotion/test/test_common.py
 flumotion/test/test_common_avltree.py
 flumotion/test/test_common_bundle.py
 flumotion/test/test_common_componentui.py
 flumotion/test/test_common_connection.py
+flumotion/test/test_common_eventcalendar.py
+flumotion/test/test_common_format.py
+flumotion/test/test_common_fraction.py
 flumotion/test/test_common_gstreamer.py
 flumotion/test/test_common_messages.py
 flumotion/test/test_common_netutils.py
 flumotion/test/test_common_package.py
 flumotion/test/test_common_planet.py
-flumotion/test/test_common.py
+flumotion/test/test_common_process.py
 flumotion/test/test_common_pygobject.py
 flumotion/test/test_common_signals.py
+flumotion/test/test_common_vfs.py
+flumotion/test/test_common_xmlwriter.py
+flumotion/test/test_component.py
 flumotion/test/test_component_base_scheduler.py
 flumotion/test/test_component_base_watcher.py
 flumotion/test/test_component_bouncers_bouncer.py
+flumotion/test/test_component_bouncers_bouncer_authsession.py
 flumotion/test/test_component_bouncers_component.py
 flumotion/test/test_component_bouncers_plug.py
-flumotion/test/test_component_feeder.py
+flumotion/test/test_component_disker.py
 flumotion/test/test_component_feed.py
+flumotion/test/test_component_feedcomponent.py
+flumotion/test/test_component_feeder.py
 flumotion/test/test_component_httpserver.py
 flumotion/test/test_component_httpstreamer.py
 flumotion/test/test_component_init.py
 flumotion/test/test_component_padmonitor.py
 flumotion/test/test_component_playlist.py
-flumotion/test/test_component.py
+flumotion/test/test_component_providers.py
 flumotion/test/test_comptest.py
 flumotion/test/test_config.py
 flumotion/test/test_configure.py
@@ -423,9 +472,13 @@ flumotion/test/test_greeter.py
 flumotion/test/test_htpasswdcrypt.py
 flumotion/test/test_http.py
 flumotion/test/test_i18n.py
+flumotion/test/test_icalbouncer.py
+flumotion/test/test_import.py
 flumotion/test/test_keycards.py
 flumotion/test/test_logfilter.py
 flumotion/test/test_manager_admin.py
+flumotion/test/test_manager_component.py
+flumotion/test/test_manager_config.py
 flumotion/test/test_manager_manager.py
 flumotion/test/test_manager_worker.py
 flumotion/test/test_options.py
@@ -440,44 +493,53 @@ flumotion/test/test_saltsha256.py
 flumotion/test/test_testclasses.py
 flumotion/test/test_twisted_integration.py
 flumotion/test/test_ui_fgtk.py
-flumotion/test/test_wizard_models.py
 flumotion/test/test_wizard.py
+flumotion/test/test_wizard_models.py
+flumotion/test/test_wizard_save.py
 flumotion/test/test_worker_config.py
-flumotion/test/test_workerconfig.py
 flumotion/test/test_worker_job.py
 flumotion/test/test_worker_medium.py
 flumotion/test/test_worker_worker.py
+flumotion/test/test_workerconfig.py
+flumotion/tester/__init__.py
+flumotion/tester/client.py
+flumotion/tester/clientfactory.py
+flumotion/tester/httpclient.py
+flumotion/twisted/__init__.py
 flumotion/twisted/checkers.py
 flumotion/twisted/compat.py
 flumotion/twisted/credentials.py
 flumotion/twisted/defer.py
 flumotion/twisted/fdserver.py
 flumotion/twisted/flavors.py
-flumotion/twisted/__init__.py
 flumotion/twisted/integration.py
 flumotion/twisted/pb.py
 flumotion/twisted/portal.py
 flumotion/twisted/reflect.py
 flumotion/twisted/rtsp.py
+flumotion/ui/__init__.py
 flumotion/ui/fgtk.py
 flumotion/ui/fileselector.py
 flumotion/ui/glade.py
 flumotion/ui/icons.py
-flumotion/ui/__init__.py
 flumotion/ui/kiwipatches.py
+flumotion/ui/linkwidget.py
 flumotion/ui/simplewizard.py
 flumotion/ui/trayicon.py
 flumotion/ui/wizard.py
+flumotion/worker/__init__.py
 flumotion/worker/base.py
+flumotion/worker/checks/__init__.py
 flumotion/worker/checks/audio.py
 flumotion/worker/checks/check.py
+flumotion/worker/checks/cortado.py
 flumotion/worker/checks/encoder.py
 flumotion/worker/checks/gst010.py
-flumotion/worker/checks/__init__.py
+flumotion/worker/checks/http.py
+flumotion/worker/checks/package.xml
 flumotion/worker/checks/video.py
 flumotion/worker/config.py
 flumotion/worker/feedserver.py
-flumotion/worker/__init__.py
 flumotion/worker/job.py
 flumotion/worker/main.py
 flumotion/worker/medium.py
